# source2gen

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  ACKNOWLEDGEMENTS  CMakeLists.txt  CMakeUserPresets.json  LICENSE.txt  README.md  conanfile.py  conanfile.txt  premake5.lua  sdk-static.toml
include/: Include.h  options.hpp  proc.h
include/sdk/: interfaceregs.h  sdk.h
include/sdk/interfaces/client/game/: datamap_t.h
include/sdk/interfaces/common/: CBufferString.h  CInterlockedInt.h  CTSList.h  CThreadMutex.h  CThreadSpinMutex.h  CThreadSpinRWLock.h  CUtlMap.h  CUtlMemory.h  CUtlMemoryPoolBase.h  CUtlRBTree.h  CUtlString.h  CUtlTSHash.h  CUtlVector.h
include/sdk/interfaces/schemasystem/: schema.h
include/sdk/interfaces/tier0/: IMemAlloc.h
include/tools/: address.h  codegen.h  config.h  field_parser.h  fnv.h  loader.h  loader_linux.h  loader_windows.h  name_parser.h  platform.h  string_helpers.h  util.h  virtual.h
include/tools/codegen/: c.h  c_family.h  codegen.h  cpp.h
include/tools/codegen/detail/: c_family.h
include/tools/console/: console.h
include/tools/loader/: loader.h  loader_linux.h  loader_shared.h  loader_windows.h
scripts/: generate_static.py  license_template.txt  license_template_header.txt  run.sh  test.sh  update_copyrights.py
sdk-dummy/: CMakeLists.txt  source2gen_user_types.hpp
sdk-filler/: types.hpp
sdk-static/: CMakeLists.txt  conanfile.py
sdk-static/c/: CMakeLists.txt  conanfile.py
sdk-static/c/include/source2sdk/: source2gen_user_types.h
sdk-static/c/include/source2sdk/source2gen/: source2gen.h
sdk-static/cpp/: CMakeLists.txt  conanfile.py
sdk-static/cpp/include/source2sdk/: source2gen_user_types.hpp
sdk-static/cpp/include/source2sdk/source2gen/: source2gen.hpp  source2gen_user_types.hpp
sdk-static/include/source2sdk/: source2gen.hpp  source2gen_user_types.hpp
sdk-static/source2sdk/: source2gen_user_types.hpp
source2gen/: CMakeLists.txt
source2gen-loader/: CMakeLists.txt
source2gen-loader/include/: steam_resolver.h
source2gen-loader/include/steam_resolver/: steam_resolver.h  steam_resolver_none.h  steam_resolver_windows.h
source2gen-loader/src/: main.cpp
source2gen-shared/: CMakeLists.txt
source2gen-shared/include/shared/loader/: loader.h  loader_windows.h
source2gen/include/: Include.h  options.hpp
source2gen/include/sdk/: interfaceregs.h  sdk.h
source2gen/include/sdk/interfaces/common/: CBufferString.h  CTSList.h  CThreadMutex.h  CThreadSpinMutex.h  CThreadSpinRWLock.h  CUtlMap.h  CUtlMemory.h  CUtlMemoryPoolBase.h  CUtlRBTree.h  CUtlString.h  CUtlTSHash.h  CUtlVector.h
source2gen/include/sdk/interfaces/schemasystem/: schema.h
source2gen/include/sdk/interfaces/tier0/: IMemAlloc.h
source2gen/include/tools/: codegen.h  field_parser.h  fnv.h  platform.h  util.h
source2gen/include/tools/codegen/: c.h  codegen.h  cpp.h
source2gen/include/tools/codegen/detail/: c_family.h
source2gen/include/tools/loader/: loader.h  loader_linux.h  loader_shared.h  loader_windows.h
source2gen/src/: main.cpp  options.cpp
source2gen/src/sdk/: sdk.cpp
source2gen/src/sdk/interfaces/common/: CBufferString.cpp
source2gen/src/sdk/interfaces/tier0/: IMemAlloc.cpp
source2gen/src/startup/: startup.cpp
source2gen/src/tools/: field_parser.cpp
source2gen/test/: CMakeLists.txt
source2gen/test/src/codegen/: test.c.cpp  test.cpp.cpp
src/: main.cpp
src/sdk/: sdk.cpp
src/sdk/interfaces/schemasystem/: schema.cpp
src/sdk/interfaces/tier0/: IMemAlloc.cpp
src/startup/: startup.cpp
src/startup/entrypoint/: dllmain.cpp
src/tools/: config.cpp  field_parser.cpp
test/: CMakeLists.txt
test/src/: test.codegen.cpp
test/src/codegen/: test.c.cpp  test.cpp.cpp
